dirty fix location card behaviour on safari

--- a/src/components/Location/Location.scss
+++ b/src/components/Location/Location.scss
@@ -1,5 +1,20 @@
 @import '../../styles/variables';
 
+
+.location:nth-child(even) {
+    @media(min-width: $breakpoint-desktop) {
+        .location__contents {
+            margin-left: auto;
+        }
+    }
+}
+.location:nth-child(odd) {
+    @media(min-width: $breakpoint-desktop) {
+        .location__contents {
+            margin-right: auto;
+        }
+    }
+}
 .location {
     width: 100%;
     height: 714px;
@@ -17,7 +32,6 @@
                 &:nth-child(#{$i}) {
                     flex-direction: row-reverse;
                 }
-    
             }
         }
        
@@ -58,6 +72,7 @@
             margin-top: 0px;
             border-radius: 15px;
             width: 730px;
+           
 
         }
 
